<resources>
    <string name="app_name">Shift-Flow</string>
    <string name="act_main_user_greeting_default_txt"><b>Hello guest!</b></string>
    <string name="act_main_edit_account_btn_txt">Edit\nAccount</string>
    <string name="act_main_delete_account_btn_txt">Delete\nAccount</string>
    <string name="act_main_content_description_user_img">A picture of the user</string>
    <string name="act_main_credits_txt"><b>Made by Yair Ziv</b></string>
    <string name="act_main_exit_dialog_title">Exit App</string>
    <string name="act_main_exit_dialog_body">Are you sure you want to exit?</string>
    <string-array name="hourly_greetings_array">
        <item>6:Good morning</item>
        <item>12:Good afternoon</item>
        <item>17:Good evening</item>
        <item>21:Good night</item>
    </string-array>
    <string name="users_menu_item_about_title">About Us</string>
    <string name="users_menu_item_add_business_title">Add Your Business</string>
    <string name="users_menu_item_sign_up_title">Sign Up</string>
    <string name="users_menu_item_sign_in_title">Sign In</string>
    <string name="users_menu_item_verify_email_title">Verify Email</string>
    <string name="users_menu_item_disconnect_title">Disconnect</string>
    <string name="users_menu_item_show_users_title">Show Users</string>
    <string name="users_menu_item_shifts_history_title">See Shifts History</string>
    <string name="users_menu_item_help_title">Help</string>
    <string name="users_menu_help_home_screen_title">Home Screen</string>
    <string name="users_menu_help_add_business">Add a Business</string>
    <string name="users_menu_help_apply_to_business">Apply to a Business</string>
    <string name="users_menu_help_manage_employees">Manage Employees</string>
    <string name="users_menu_help_manage_roles">Manage Roles</string>
    <string name="users_menu_help_set_shifts">Set Shifts</string>
    <string name="users_menu_help_view_shifts_history">View Shifts History</string>
    <string name="act_input_title_register"><b>Register</b></string>
    <string name="act_input_title_update"><b>Update Info</b></string>
    <string name="act_input_next_btn_text">Next</string>
    <string name="act_input_confirm_btn_text">Confirm</string>
    <string name="act_input_back_btn_text">Previous</string>
    <string name="act_input_cancel_btn_text">Cancel</string>
    <string name="act_input_exit_dialog_title">Exit Form</string>
    <string name="act_input_exit_dialog_message">Are you sure you want to exit? Any changes you made
        will not be saved</string>
    <string name="act_input_scrollview_content_desc">A scrollView holding a page of the input form</string>
    <string name="user_registration_form_toolbar_title">Sign Up</string>
    <string name="user_update_form_toolbar_title">Update Your Account</string>
    <string name="frag_input1_first_name_input_hint">First Name</string>
    <string name="frag_input1_last_name_input_hint">Last Name</string>
    <string name="frag_input1_birthdate_input_hint">Your Birthday</string>
    <string name="frag_input1_email_input_hint">Email</string>
    <string name="frag_input1_password_input_hint">Password</string>
    <string name="frag_input_2_title"><b>Choose your location:</b></string>
    <string name="frag_input2_phone_hint">Phone Number</string>
    <string name="frag_input2_address_hint">Address</string>
    <string name="frag_input2_city_hint">City</string>
    <string name="frag_input2_security_info_txt"><b>Security Info:</b></string>
    <string name="frag_input2_old_password_hint">Old Password</string>
    <string name="frag_input2_phone_number_hint">Phone Number</string>
    <string name="frag_input2_location_search_hint">Search for a place</string>
    <string name="frag_input_3_title_txt"><b>Take a Picture!</b></string>
    <string name="frag_input_3_camera_btn_txt">Picture</string>
    <string name="frag_input_3_gallery_btn_txt">Gallery</string>
    <string name="dialog_login_title"><b>Log In</b></string>
    <string name="dialog_login_button_txt">Log In</string>
    <string name="dialog_about_title"><b>About Us</b></string>
    <string name="dialog_about_text">
        Welcome to Shift-Flow!\n\n
        This app is dedicated to organizing and managing shifts and businesses.\n\n
        After you register in the app, you can browse businesses from all around the world and apply
         to them.\n
        After a manager from the branch will accept you, you will be updated about your shifts in
         the home page. A manager can also promote or demote you, depending on your current status.\n
        Additionally, the manager can also fire you.\n\n
        You can also create your own branch with the menu icon that looks like a house with a plus.\n
        As a manager, you can accept applications from other employees, promote or demote them, and
         also fire them. You can also create and remove roles for your employees, and create shifts
         with your employees.\n\n
        This beautiful app was created, designed, and coded by the amazing individual Yair Ziv. Yair
        Ziv is a student in twelfth grade in Alliance, and is learning how to make mobile apps.
        \n\nThis is his final project for the year, and he hopes you\'ll enjoy it!
    </string>
    <string name="act_users_title"><b>The App\'s Users:</b></string>
    <string name="act_users_user_not_found_txt">No user was found</string>
    <string name="row_user_country_title">Country:</string>
    <string name="row_users_city_title">City:</string>
    <string name="row_users_address_title">Address:</string>
    <string name="row_users_email_title">Email:</string>
    <string name="row_users_phone_title">Phone Number:</string>
    <string name="row_users_sample_country">Israel 1#</string>
    <string name="row_users_sample_name">Guest name</string>
    <string name="row_users_sample_age">X years old</string>
    <string name="row_users_sample_address">Some Address 99</string>
    <string name="row_users_sample_city">City Name</string>
    <string name="row_users_sample_email">someEmail123@gmail.com</string>
    <string name="row_users_sample_phone">051–111–1111</string>
    <string name="frag_main_branches_businesses_title"><b>Businesses:</b></string>
    <string name="frag_main_branches_my_city_checkbox_txt">My city</string>
    <string name="frag_main_branches_add_business_txt">Add your business</string>
    <string name="frag_main_branches_business_not_found_txt">No business was found\nಥ_ಥ</string>
    <string name="act_business_input_title"><b>Your Business Details:</b></string>
    <string name="business_registration_form_toolbar_title">Create Your Business</string>
    <string name="business_update_form_toolbar_title">Update Your Business</string>
    <string name="frag_business_input_1_company_name_hint">Company Name</string>
    <string name="frag_business_input_1_password_hint">Branch Password</string>
    <string name="frag_business_input_1_opening_time_hint">Opening Time</string>
    <string name="frag_business_input_1_closing_time_hint">Closing Time</string>
    <string name="frag_business_input_1_shifts_subtitle"><b>The shifts in the week:</b></string>
    <string name="frag_business_input_2_title"><b>Your business address:</b></string>
    <string name="day_shifts_num_picker_sample_day">Day of the week</string>
    <string name="row_branch_sample_branch_name">Some Business</string>
    <string name="row_branch_sample_opening_time">Opening: 8:00</string>
    <string name="row_branch_sample_closing_time">Closing: 22:00</string>
    <string name="row_branch_sample_address">Business address</string>
    <string name="row_branch_btn_see_more_txt">See more</string>
    <string name="row_branch_btn_apply_txt">Apply to branch</string>
    <string name="act_branch_closed_msg">Currently closed</string>
    <string name="act_branch_working_hours_sample">Open during: 8:00 – 22:00</string>
    <string name="act_branch_business_address_sample">Some address</string>
    <string name="act_branch_employees_subtitle">Employees:</string>
    <string name="act_branch_btn_leave_txt">Leave branch</string>
    <string name="act_branch_employee_not_found_txt">No Employee was found\nಥ_ಥ</string>
    <string name="branch_menu_item_edit">Edit Branch</string>
    <string name="branch_menu_item_delete">Delete Branch</string>
    <string name="branch_menu_item_set_future_shifts">Set Future Shifts</string>
    <string name="dialog_delete_branch_title">Delete branch</string>
    <string name="dialog_delete_branch_warning_txt">Are you sure you want to delete your branch?\n<b>This action is irreversible</b></string>
    <string name="dialog_delete_branch_enter_password_txt">Enter the branch\'s password:</string>
    <string name="dialog_delete_branch_branch_password_hint">Branch Password</string>
    <string name="dialog_delete_branch_btn_cancel_txt">Cancel</string>
    <string name="dialog_delete_branch_btn_confirm_txt">Confirm</string>
    <string name="frag_branch_roles_title"><b>Roles in the branch:</b></string>
    <string name="frag_branch_roles_no_roles_found_txt">No roles found</string>
    <string name="frag_branch_role_add_role_btn_txt">Add Role</string>
    <string name="row_workplace_employee_status">Status: Employee</string>
    <string name="row_workplace_active_txt">Active</string>
    <string name="row_workplace_btn_shifts_history">See Shifts History</string>
    <string name="row_shift_sample_company_name">Company Name</string>
    <string name="row_shift_role_hint">Role</string>
    <string name="row_shift_sample_role">Janitor</string>
    <string name="row_shift_date_hint">Date</string>
    <string name="row_shift_sample_date">10 / 10 / 2022</string>
    <string name="row_shift_time_hint">Time</string>
    <string name="row_shift_sample_time">9:00 to 22:30</string>
    <string name="dialog_help_manage_employees_paragraph_1">If you\'re a manager, there\'s a good chance you have employees, and knowing how to handle them is important. Here are the key points:</string>
    <string name="dialog_help_manage_employees_applicants_title"><b>Applicants:</b></string>
    <string name="dialog_help_manage_employees_paragraph_2">First things first, how do you even accept applications to you business?\nTo do this, go to your business\'s screen and swipe left twice. This will bring you to a screen where every application to you business is shown.\nYou can save the applicant\'s phone number by clicking on their name, but you could also accept or reject them right away:</string>
    <string name="dialog_help_manage_employees_employee_status_title"><b>Employee Status:</b></string>
    <string name="dialog_help_manage_employees_paragraph_3">After accepting your employee, you can decide to give them a little reward and promote them to a manager. Or, if they have been a bad non-binary worker, you can fire them from your business. Note that managers are allowed to fire and demote other managers.\nAdditionally, you can view your employee\'s shifts in your business by pressing \'See Shifts History\':</string>
    <string name="dialog_help_set_shifts_paragraph_1">Managers can set shifts for the current week and the next one. To do so, go to the menu in your business\'s screen and select whichever week you want.\nIn the screen that will open you will be able to add shifts through the obvious button, but also edit shifts you have already set in the past for this week.</string>
    <string name="dialog_help_set_shifts_paragraph_2">To add an employee to a specific role in the shift, press their image above and then the name of the role you want them in. Pay attention: an employee cannot work at two roles in one shift.\n\nTo remove an employee from a role in a certain shift, press their image in the shift.\n\nTo delete the entire shift, press on it for a second or too (long-press).\n\nOnce you are done setting your shifts, press \'Save Shifts\', and let the magnificent app do the rest.</string>
</resources>