<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menuUsersItemAbout" android:title="@string/users_menu_item_about_title" android:icon="@drawable/about_icon" app:showAsAction="ifRoom" />
    <item android:id="@+id/menuUsersItemSignUp" android:title="@string/users_menu_item_sign_up_title" app:showAsAction="never" />
    <item android:id="@+id/menuUsersItemSignIn" android:title="@string/users_menu_item_sign_in_title" app:showAsAction="never" />
    <item android:id="@+id/menuUsersItemVerification" android:title="@string/users_menu_item_verify_email_title" app:showAsAction="never" />
    <item android:id="@+id/menuUsersItemShowUsers" android:title="@string/users_menu_item_show_users_title" app:showAsAction="never" />
    <item android:id="@+id/menuUsersItemDisconnect" android:title="@string/users_menu_item_disconnect_title" app:showAsAction="never" />
</menu>