<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rowUserShiftMainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/rowShiftTvCompanyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/row_shift_sample_company_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:maxLines="2"
        android:layout_marginBottom="8dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/row_shift_role_hint"
        android:layout_marginBottom="4dp"
        android:focusable="false"
        android:clickable="false"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rowShiftEtRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/row_shift_sample_role"
            android:inputType="none"
            android:clickable="false"
            android:focusable="false"
            android:enabled="false"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/row_shift_date_hint"
        android:layout_marginBottom="4dp"
        android:focusable="false"
        android:clickable="false"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rowShiftEtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/row_shift_sample_date"
            android:inputType="none"
            android:clickable="false"
            android:focusable="false"
            android:enabled="false"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/row_shift_time_hint"
        android:focusable="false"
        android:clickable="false"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rowShiftEtTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/row_shift_sample_time"
            android:inputType="none"
            android:clickable="false"
            android:focusable="false"
            android:enabled="false"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>