<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/transparent_background"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fragBranchEmployeesTvCurrentOpenness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/act_branch_closed_msg"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/fragBranchEmployeesTvWorkingTimes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/act_branch_working_hours_sample"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/fragBranchEmployeesTvAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/act_branch_business_address_sample"
        android:textSize="20sp"
        android:maxLines="2"
        app:drawableStartCompat="@drawable/location_icon_outline"
        android:drawablePadding="4dp"
        android:layout_marginBottom="8dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_marginVertical="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_branch_employees_subtitle"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragBranchEmployeesRvEmployees"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:id="@+id/fragBranchEmployeesTvEmployeeNotFound"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/act_branch_employee_not_found_txt"
        android:textStyle="bold"
        android:textSize="32sp"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <android.widget.Button
            android:id="@+id/fragBranchEmployeesBtnLeaveBranch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:drawableStart="@drawable/cancel_icon_filled"
            android:drawablePadding="8dp"
            android:paddingHorizontal="10dp"
            android:layout_marginEnd="8dp"

            android:backgroundTint="@color/red"
            style="@style/ImprovedButtonAppearance"
            android:text="@string/act_branch_btn_leave_txt"
            android:textColor="@color/white"
            android:textAllCaps="false"
            />

        <ProgressBar
            android:id="@+id/fragBranchEmployeesPbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <android.widget.Button
            android:id="@+id/fragBranchEmployeesBtnApplyToBusiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            style="@style/ImprovedButtonAppearance"
            android:drawableStart="@drawable/assignment_add_icon_white"
            android:drawablePadding="8dp"
            android:paddingHorizontal="10dp"
            android:text="@string/row_branch_btn_apply_txt"
            android:layout_gravity="end"
            />
    </LinearLayout>

</LinearLayout>