<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="8dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/rowWorkplaceTvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/row_branch_sample_branch_name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:maxLines="2"
                />

            <TextView
                android:id="@+id/rowWorkplaceTvStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="4dp"
                android:textSize="16sp"
                android:text="@string/row_workplace_employee_status" />

            <TextView
                android:id="@+id/rowWorkplaceTvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/row_branch_sample_address"
                android:textSize="16sp"
                android:maxLines="2"
                app:drawableStartCompat="@drawable/location_icon_outline"
                android:drawablePadding="4dp"
                android:layout_marginTop="4dp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/rowWorkplaceTvActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_workplace_active_txt"
            app:drawableTopCompat="@drawable/green_circle"
            android:layout_marginHorizontal="4dp"
            />
    </LinearLayout>

    <android.widget.Button
        android:id="@+id/rowWorkplaceBtnShiftsHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:paddingHorizontal="10dp"

        android:drawableStart="@drawable/shifts_history"
        android:drawablePadding="8dp"
        style="@style/ImprovedButtonAppearance"
        android:text="@string/row_workplace_btn_shifts_history"
        />

</LinearLayout>