<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:text="@string/users_menu_help_set_shifts"
        android:textSize="28sp"
        android:textStyle="bold"

        android:layout_marginBottom="8dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"

                android:textSize="18sp"
                android:text="@string/dialog_help_set_shifts_paragraph_1"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@drawable/set_shifts"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="18sp"
                android:text="@string/dialog_help_set_shifts_paragraph_2"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>